--- a/task-03.html
+++ b/task-03.html
@@ -7,11 +7,18 @@
     <title>Задание 3</title>
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+          'Helvetica Neue', sans-serif;
         background-color: #fff;
         color: #424242;
         line-height: 1.5;
+      }
+      .gallery {
+        display: flex;
+        justify-content: space-between;
+        margin-left: auto;
+        margin-right: auto;
+        width: 1200px;
       }
     </style>
   </head>
